# mcp-fiori-workflow

./: .gitignore  .gitignore.txt  README.md  pyproject.toml
src/mcp_fiori_workflow/: __init__.py  __main__.py  batch.py  params.py  pyproject.toml  sap_client.py  server.py  workflow_xml.py
